# libcoro

./: .gitignore  CMakeLists.txt  README.md
include/: coro.h
include/coro/: scheduler.h  task.h
samples/: CMakeLists.txt  hello_world.c  list.h  macro.h  multi_hello.c  pipe_io.c  queue.c  tcp_echo_server.c  timer.c
src/: coro.c  coro_ctx.h  coro_ev.c  coro_ev.h  coro_ext.c  coro_hooks.c  coro_int.h  coro_thread.h  coro_thread_pthread.c  coro_types.h  macro.h  scheduler.c  scheduler.h  task.c  task.h
src/arch/x86_64/: coro_arch.h  coro_swap.s
src/backends/: coro_backend.c  coro_backend.h  coro_backend_ev.c  coro_backend_ev.h  coro_backend_select.c  coro_backend_select.h
tests/: CMakeLists.txt  basic_run.c  callsoon.c  cleanup.c  custom_watcher.c  hello_world.c  multi_consumer.c  multi_hello.c  multi_producer.c  multi_queue.c  multi_run.c  pipe_io.c  queue.c  queue_cleanup.c  test_harness.c  test_harness.h  timer.c  yeild_many.c
