macro(build_sample name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} coro)
    target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
endmacro()

build_sample(hello_world hello_world.c)
build_sample(multi_hello multi_hello.c)
build_sample(pipe_io pipe_io.c)
build_sample(queue queue.c)
build_sample(timer timer.c)
build_sample(tcp_echo_server tcp_echo_server.c)
